fixed spot page alignment, added owner name to spot details,  working on adding review owner name

--- a/frontend/src/components/CSS/SpotsDetail.css
+++ b/frontend/src/components/CSS/SpotsDetail.css
@@ -131,8 +131,9 @@
   color: black;
   border-radius: 10px;
   margin: 10px;
+  margin-left: 100%;
   padding: 10px;
-  width: 50%;
+  width: 75%;
 }
 
 .reviewMessage{
@@ -202,9 +203,11 @@
     width: 100%;
     margin-left: 2rem;
   }
+
+  .eachReview {
+    margin-left: 1rem;
+  }
   .createReviewButton {
     margin-left: 4rem;
   }
 }
-
-
